--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.firstidea.android.brokerx"
@@ -37,10 +37,13 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.mani:ThinDownloadManager:1.3.0'
     compile 'im.dacer:AndroidCharts:1.0.2'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.thoughtbot:expandablerecyclerview:1.3'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
