--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.firstidea.android.brokerx"
         minSdkVersion 16
         targetSdkVersion 23
@@ -17,10 +18,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
@@ -39,8 +47,12 @@ dependencies {
     compile 'im.dacer:AndroidCharts:1.0.2'
     compile 'com.thoughtbot:expandablerecyclerview:1.3'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    compile 'com.android.support:multidex:1.0.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile files('libs/poi-ooxml-3.11.jar')
+    compile files('libs/poi-3.15.jar')
+    compile files('libs/xmlbeans-2.6.0.jar')
 }
 
 
