--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,9 @@ dependencies {
     compile 'com.android.support:multidex:1.0.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile files('libs/poi-ooxml-3.11.jar')
+    /*compile files('libs/poi-ooxml-3.11.jar')
     compile files('libs/poi-3.15.jar')
-    compile files('libs/xmlbeans-2.6.0.jar')
+    compile files('libs/xmlbeans-2.6.0.jar')*/
 }
 
 
